# Cloakwork

./: .env.example  .gitignore  Cargo.toml  DEMO.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  craco.config.js  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
contracts/cloakwork-types/: Cargo.toml
contracts/cloakwork-types/src/: lib.rs
contracts/cloakwork_registry/: Cargo.toml
contracts/cloakwork_registry/src/: lib.rs
contracts/cloakwork_verifier/: Cargo.toml
contracts/gated_action_demo/: Cargo.toml
contracts/gated_action_demo/src/: lib.rs
contracts/gated_action_demo/test_snapshots/tests/: test_execute_active_credential_emits_event.1.json  test_execute_expired_credential_panics.1.json  test_execute_revoked_credential_panics.1.json  test_initialize_twice_fails.1.json
docs/: prd-reference.md
proofs/: README.md
proofs/circom/: cloakwork.circom  input.example.json  package.json
proofs/risc0/: Cargo.toml
proofs/risc0/lib/: Cargo.toml
proofs/risc0/lib/src/: lib.rs
proofs/risc0/lib/src/rr/: dns_class.rs  mod.rs  record_data.rs  record_type.rs  resource.rs
proofs/risc0/lib/src/rr/dnssec/: algorithm.rs  message.rs  mod.rs
proofs/risc0/lib/src/rr/dnssec/rdata/: dns_key.rs  mod.rs  rrsig.rs  sig.rs
proofs/risc0/lib/src/rr/domain/: label.rs  mod.rs  name.rs
proofs/risc0/lib/src/rr/rdata/: mod.rs  rrsig.rs  txt.rs
proofs/risc0/lib/src/serialize/: binary.rs
proofs/risc0/lib/tests/: smoke.rs
proofs/risc0/program/: Cargo.toml
proofs/risc0/program/src/: main.rs
proofs/risc0/scripts/: Cargo.toml  build.rs
proofs/risc0/scripts/src/: entrypoint.rs  helpers.rs  table.rs
public/: index.html  landing.html  styles.css
public/circuits/: cloakwork_final.zkey  verification_key.json
scripts/: deploy.sh  register_key.js  setup.sh
sdk/cloakwork-sdk/: Cargo.toml  README.md
src/: App.test.tsx  App.tsx  config.ts  index.css  index.tsx
src/components/: AuthGate.tsx  ConnectPrompt.test.tsx  ConnectPrompt.tsx  CredentialCard.tsx  CredentialManager.tsx  DNSChallengeGuide.tsx  DNSSECCheck.tsx  GatedActionDemo.tsx  GatedActionSection.tsx  Header.tsx  NetworkBadge.tsx  PrivacyPanel.tsx  ProofGenerator.tsx  ProofWorkspace.tsx  VerificationPanel.tsx  WalletConnect.tsx
src/hooks/: useCloakworkProof.ts  useStellarWallet.ts
src/types/: circomlibjs.d.ts
src/utils/: commitments.ts  dnssec.ts  format.ts  formatAddress.ts  proofFormat.ts
src/workers/: prover.worker.js
tests/integration/: full_flow.ts
zkdnssec-stellar/: .env.example  .gitignore  Cargo.toml  README.md
zkdnssec-stellar/contracts/: Cargo.toml
zkdnssec-stellar/contracts/src/: lib.rs  test.rs
zkdnssec-stellar/contracts/tests/: testnet_integration.rs
zkdnssec-stellar/docs/: prd.md
zkdnssec-stellar/lib/: Cargo.toml
zkdnssec-stellar/lib/src/: lib.rs
zkdnssec-stellar/lib/src/rr/: dns_class.rs  mod.rs  record_data.rs  record_type.rs  resource.rs
zkdnssec-stellar/lib/src/rr/dnssec/: algorithm.rs  message.rs  mod.rs
zkdnssec-stellar/lib/src/rr/dnssec/rdata/: dns_key.rs  mod.rs  rrsig.rs  sig.rs
zkdnssec-stellar/lib/src/rr/domain/: label.rs  name.rs
zkdnssec-stellar/lib/src/rr/rdata/: mod.rs  rrsig.rs  txt.rs
zkdnssec-stellar/lib/src/serialize/: binary.rs
zkdnssec-stellar/lib/tests/: smoke.rs
zkdnssec-stellar/program/: Cargo.toml
zkdnssec-stellar/program/src/: main.rs
zkdnssec-stellar/scripts/: Cargo.toml  build.rs
zkdnssec-stellar/scripts/src/: entrypoint.rs  helpers.rs  table.rs
zkdnssec-stellar/smoke_tests/: run_all.sh
zkdnssec-stellar/stretch/noir-circuit/: Nargo.toml
zkdnssec-stellar/stretch/noir-circuit/src/: main.nr
zkdnssec-stellar/stretch/ultrahonk-contract/: Cargo.toml
zkdnssec-stellar/stretch/ultrahonk-contract/src/: lib.rs  test.rs
(+24 files in other folders)
