[workspace]
members = [
    "contracts/cloakwork-types",
    "contracts/cloakwork_verifier",
    "contracts/cloakwork_registry",
    "contracts/gated_action_demo",
    "sdk/cloakwork-sdk",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
