[package]
name = "gated-action-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.1.0" }
cloakwork-types = { path = "../../contracts/cloakwork-types" }
cloakwork-sdk = { path = "../../sdk/cloakwork-sdk" }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
