[workspace]
members = ["lib", "scripts"]
exclude = ["program"]
resolver = "2"

# program/ is the RISC0 guest crate — it runs under a separate RISC0 toolchain
# and cannot be part of the host workspace.

[workspace.dependencies]
alloy-sol-types = "0.7.7"
rsa = { version = "0.9.6", features = ["sha2"] }
crypto-bigint = "0.5.5"
sha2 = "0.10.8"
ecdsa = { version = "0.16.9" }
p256 = { version = "0.13.2" }
serde = { version = "1", features = ["derive"] }
