[package]
name = "zkdnssec-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2", features = ["client"] }
clap = { version = "4.0", features = ["derive"] }
alloy-sol-types = "0.7.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
dotenv = "0.15"
trust-dns-client = "0.23"
trust-dns-resolver = "0.23"
zkdnssec-lib = { path = "../lib" }

[build-dependencies]
risc0-build = "1.2"

[[bin]]
name = "zkdnssec-scripts"
path = "src/entrypoint.rs"
