[package]
name = "cloakwork-risc0-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
ecdsa = { workspace = true }
p256 = { workspace = true, features = ["ecdsa", "std"] }
serde = { workspace = true }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

