[package]
name = "cloakwork-risc0-program"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
alloy-sol-types = "0.7.7"
cloakwork-risc0-lib = { path = "../lib" }

[[bin]]
name = "cloakwork-risc0-program"
path = "src/main.rs"

